--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -78,8 +78,6 @@ button.delete = Suprimeix
 button.edit = Edita
 button.password.reset = Restabliment de contrasenya
 button.save = Desa
-button.saveregister      = Registrar-se!
-
 country.afg           = Afghanistan
 country.aia           = Anguilla
 country.alb           = Albania
@@ -246,7 +244,7 @@ country.sco           = Scotland
 country.sdn           = Sudan
 country.sen           = Senegal
 country.sey           = Seychelles
-country.sin           = Singapore
+country.sgp           = Singapore
 country.skn           = St. Kitts and Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
