--- a/src/main/resources/TranslationMessages_cs.properties
+++ b/src/main/resources/TranslationMessages_cs.properties
@@ -245,7 +245,7 @@ country.sco = Skotsko
 country.sdn = S\u00FAd\u00E1n
 country.sen = Senegal
 country.sey = Seychely
-country.sin = Singapur
+country.sgp = Singapur
 country.skn = Svat\u00FD Kry\u0161tof a Nevis
 country.sle = Sierra Leone
 country.slv = Salvador
