--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -245,7 +245,7 @@ country.sco           = Scotland
 country.sdn           = Sudan
 country.sen           = Senegal
 country.sey           = Seychelles
-country.sin           = Singapore
+country.sgp           = Singapore
 country.skn           = St. Kitts and Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
