--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -78,8 +78,6 @@ button.delete            = Eliminar
 button.edit              = Editar
 button.password.reset    = Restablecimiento de contrase\u00F1a
 button.save              = Guardar
-button.saveregister      = Registrarse!
-
 country.afg           = Afghanistan
 country.aia           = Anguilla
 country.alb           = Albania
@@ -246,7 +244,7 @@ country.sco           = Scotland
 country.sdn           = Sudan
 country.sen           = Senegal
 country.sey           = Seychelles
-country.sin           = Singapore
+country.sgp           = Singapore
 country.skn           = St. Kitts and Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
