--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -244,7 +244,7 @@ country.sco           = Szkocja
 country.sdn           = Sudan
 country.sen           = Senegal
 country.sey           = Seychelles
-country.sin           = Singapore
+country.sgp           = Singapore
 country.skn           = St. Kitts and Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
