--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -245,7 +245,7 @@ country.sco           = Skottland
 country.sdn           = Sudan
 country.sen           = Senegal
 country.sey           = Seychellerna
-country.sin           = Singapore
+country.sgp           = Singapore
 country.skn           = Saint Kitts och Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
