--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -246,7 +246,7 @@ country.sco           = Schottland
 country.sdn           = Sudan
 country.sen           = Senegal
 country.sey           = Seychellen
-country.sin           = Singapore
+country.sgp           = Singapore
 country.skn           = St. Kitts und Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
