--- a/src/main/resources/TranslationMessages_cs.properties
+++ b/src/main/resources/TranslationMessages_cs.properties
@@ -82,9 +82,9 @@ button.save = Ulo\u017Eit
 country.afg = Afgh\u00E1nist\u00E1n
 country.aia = Anguilla
 country.alb = Alb\u00E1nie
-country.alg = Al\u017E\u00EDrsko
+country.dza = Al\u017E\u00EDrsko
 country.and = Andorra
-country.ang = Angola
+country.ago = Angola
 country.arg = Argentina
 country.arm = Arm\u00E9nie
 country.aru = Aruba
@@ -106,7 +106,7 @@ country.bih = Bosna a Herceg.
 country.blr = B\u011Blorusko
 country.blz = Belize
 country.bol = Bol\u00EDvie
-country.bot = Botswana
+country.bwa = Botswana
 country.bra = Braz\u00EDlie
 country.brb = Barbados
 country.bru = Brunej Darussalam
@@ -114,8 +114,7 @@ country.bul = Bulharsko
 country.cam = Kambod\u017Ea
 country.can = Kanada
 country.cay = Kajmansk\u00E9 ostrovy
-country.cgo = Kongo
-country.cha = \u010Cad
+country.tcd = \u010Cad
 country.che = \u0160v\u00FDcarsko
 country.chi = Chile
 country.chn = \u010C\u00EDnsk\u00E1 lidov\u00E1 republika
@@ -127,7 +126,7 @@ country.col = Kolumbie
 country.com = Komory
 country.cpv = Kapverdy
 country.crc = Kostarika
-country.cta = Cent. African Republic
+country.caf = Cent. African Republic
 country.cub = Kuba
 country.cuw = Curacao
 country.cyp = Kypr
@@ -140,7 +139,7 @@ country.dom = Dominik\u00E1nsk\u00E1 republika
 country.ecu = Ekv\u00E1dor
 country.egy = Egypt
 country.eng = Anglie
-country.eqg = Rovn\u00EDkov\u00E1 Guinea
+country.gnq = Rovn\u00EDkov\u00E1 Guinea
 country.eri = Eritrea
 country.esp = \u0160pan\u011Blsko
 country.est = Estonsko
@@ -150,7 +149,7 @@ country.fin = Finsko
 country.fra = Francie
 country.fro = Faersk\u00E9 ostrovy
 country.gab = Gabon
-country.gam = Gambie
+country.gmb = Gambie
 country.gbr = Velk\u00E1 Brit\u00E1nie
 country.geo = Georgia
 country.gha = Ghana
@@ -159,7 +158,7 @@ country.gnb = Guinea Bisseau
 country.gre = \u0158ecko
 country.grn = Grenada
 country.gua = Guatemala
-country.gui = Guinea
+country.gin = Guinea
 country.gum = Guam
 country.guy = Guyana
 country.hai = Haiti
@@ -188,14 +187,14 @@ country.lao = Laos
 country.lbr = Lib\u00E9rie
 country.lby = Libye
 country.lca = Svat\u00E1 Lucie
-country.les = Lesotho
+country.lso = Lesotho
 country.lib = Libanon
 country.lie = Lichten\u0161tejnsko
 country.ltu = Litva
 country.lux = Lucembursko
 country.lva = Loty\u0161sko
 country.mac = Macao
-country.mad = Madagaskar
+country.mdg = Madagaskar
 country.mar = Maroko
 country.mas = Malajsie
 country.mda = Moldavsko
@@ -208,7 +207,7 @@ country.mne = \u010Cern\u00E1 Hora
 country.mng = Mongolsko
 country.moz = Mosambik
 country.msr = Montserrat
-country.mtn = Maurit\u00E1nie
+country.mrt = Maurit\u00E1nie
 country.mus = Mauricius
 country.mwi = Malawi
 country.mya = Myanmar
@@ -218,7 +217,7 @@ country.ncl = Nov\u00E1 Kaledonie
 country.ned = Nizozemsko
 country.nep = Nep\u00E1l
 country.nga = Nig\u00E9rie
-country.nig = Niger
+country.ner = Niger
 country.none = -- Vyberte pros\u00EDm --
 country.nor = Norsko
 country.north_ireland = Severn\u00ED Irsko
@@ -237,14 +236,14 @@ country.prt = Portugalsko
 country.pur = Portoriko
 country.qat = Katar
 country.rou = Rumunsko
-country.rsa = Jihoafrick\u00E1 republika
+country.zaf = Jihoafrick\u00E1 republika
 country.rus = Rusko
 country.rwa = Rwanda
 country.sam = Samoa
 country.sco = Skotsko
 country.sdn = S\u00FAd\u00E1n
 country.sen = Senegal
-country.sey = Seychely
+country.syc = Seychely
 country.sgp = Singapur
 country.skn = Svat\u00FD Kry\u0161tof a Nevis
 country.sle = Sierra Leone
