--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -83,9 +83,9 @@ button.save              = Speichern
 country.afg           = Afghanistan
 country.aia           = Anguilla
 country.alb           = Albanien
-country.alg           = Algerien
+country.dza           = Algerien
 country.and           = Andorra
-country.ang           = Angola
+country.ago           = Angola
 country.arg           = Argentinien
 country.arm           = Armenien
 country.aru           = Aruba
@@ -107,7 +107,7 @@ country.bih           = Bosnien-Herzeg.
 country.blr           = Wei\u00DFrussland
 country.blz           = Belize
 country.bol           = Bolivien
-country.bot           = Botswana
+country.bwa           = Botswana
 country.bra           = Brasilien
 country.brb           = Barbados
 country.bru           = Brunei Darussalam
@@ -115,8 +115,7 @@ country.bul           = Bulgarien
 country.cam           = Kambotscha
 country.can           = Kanada
 country.cay           = Cayman-Inseln
-country.cgo           = Kongo
-country.cha           = Tschad
+country.tcd           = Tschad
 country.che           = Schweiz
 country.chi           = Chile
 country.chn           = China VR
@@ -128,7 +127,7 @@ country.col           = Kolumbien
 country.com           = Komoren
 country.cpv           = Kap Verde
 country.crc           = Costa Rica
-country.cta           = Zent. Afr. Republik
+country.caf           = Zent. Afr. Republik
 country.cub           = Kuba
 country.cuw           = Curacao
 country.cyp           = Zypern
@@ -141,7 +140,7 @@ country.dom           = Dom. Republik
 country.ecu           = Ecuador
 country.egy           = \u00C4gypten
 country.eng           = England
-country.eqg           = \u00C4quatorial-Guinea
+country.gnq           = \u00C4quatorial-Guinea
 country.eri           = Eritrea
 country.esp           = Spanien
 country.est           = Estland
@@ -151,7 +150,7 @@ country.fin=Finnland
 country.fra           = Frankreich
 country.fro           = Faroe-Inseln
 country.gab           = Gabun
-country.gam           = Gambia
+country.gmb           = Gambia
 country.gbr           = Gro\u00DFbritannien
 country.geo           = Georgien
 country.gha           = Ghana
@@ -160,7 +159,7 @@ country.gnb           = Guinea Bisseau
 country.gre           = Griechenland
 country.grn           = Grenada
 country.gua           = Guatemala
-country.gui           = Guinea
+country.gin           = Guinea
 country.gum           = Guam
 country.guy           = Guyana
 country.hai           = Haiti
@@ -189,14 +188,14 @@ country.lao           = Laos
 country.lbr           = Liberien
 country.lby           = Libyen
 country.lca           = St. Lucia
-country.les           = Lesotho
+country.lso           = Lesotho
 country.lib           = Libanon
 country.lie           = Liechtenstein
 country.ltu           = Litauen
 country.lux           = Luxemburg
 country.lva           = Lettland
 country.mac           = Macau
-country.mad           = Madagaskar
+country.mdg           = Madagaskar
 country.mar           = Marokko
 country.mas           = Malaysia
 country.mda           = Moldawien
@@ -209,7 +208,7 @@ country.mne           = Montenegro
 country.mng           = Mongolei
 country.moz           = Mozambique
 country.msr           = Montserrat
-country.mtn           = Mauritanien
+country.mrt           = Mauritanien
 country.mus           = Mauritius
 country.mwi           = Malawi
 country.mya           = Myanmar
@@ -219,7 +218,7 @@ country.ncl           = Neukaledonien
 country.ned           = Niederlande
 country.nep           = Nepal
 country.nga           = Nigeria
-country.nig           = Niger
+country.ner           = Niger
 country.none          = -- Bitte w\u00E4hlen --
 country.nor           = Norwegen
 country.north_ireland = Nordirland
@@ -238,14 +237,14 @@ country.prt           = Portugal
 country.pur           = Puerto Rico
 country.qat=Katar
 country.rou           = Rum\u00E4nien
-country.rsa           = S\u00FCdafrika
+country.zaf           = S\u00FCdafrika
 country.rus           = Russland
 country.rwa           = Ruanda
 country.sam           = Samoa
 country.sco           = Schottland
 country.sdn           = Sudan
 country.sen           = Senegal
-country.sey           = Seychellen
+country.syc           = Seychellen
 country.sgp           = Singapore
 country.skn           = St. Kitts und Nevis
 country.sle           = Sierra Leone
