--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -81,9 +81,9 @@ button.save              = Guardar
 country.afg           = Afghanistan
 country.aia           = Anguilla
 country.alb           = Albania
-country.alg           = Algeria
+country.dza           = Algeria
 country.and           = Andorra
-country.ang           = Angola
+country.ago           = Angola
 country.arg           = Argentina
 country.arm           = Armenia
 country.aru           = Aruba
@@ -105,7 +105,7 @@ country.bih           = Bosnia Herzeg.
 country.blr           = Belarus
 country.blz           = Belize
 country.bol           = Bolivia
-country.bot           = Botswana
+country.bwa           = Botswana
 country.bra           = Brazil
 country.brb           = Barbados
 country.bru           = Brunei Darussalam
@@ -113,8 +113,7 @@ country.bul           = Bulgaria
 country.cam           = Cambodia
 country.can           = Canada
 country.cay           = Cayman Islands
-country.cgo           = Congo
-country.cha           = Chad
+country.tcd           = Chad
 country.che           = Switzerland
 country.chi           = Chile
 country.chn           = China PR
@@ -126,7 +125,7 @@ country.col           = Colombia
 country.com           = Comoros
 country.cpv           = Cape Verde
 country.crc           = Costa Rica
-country.cta           = Cent. African Republic
+country.caf           = Cent. African Republic
 country.cub           = Cuba
 country.cuw           = Curacao
 country.cyp           = Cyprus
@@ -139,7 +138,7 @@ country.dom           = Dom. Republic
 country.ecu           = Ecuador
 country.egy           = Egypt
 country.eng           = England
-country.eqg           = Equatorial Guinea
+country.gnq           = Equatorial Guinea
 country.eri           = Eritrea
 country.esp           = Espa\u00F1a
 country.est           = Estonia
@@ -149,7 +148,7 @@ country.fin           = Finland
 country.fra           = France
 country.fro           = Faroe Islands
 country.gab           = Gabon
-country.gam           = Gambia
+country.gmb           = Gambia
 country.gbr           = Gran Breta\u00F1a
 country.geo           = Georgia
 country.gha           = Ghana
@@ -158,7 +157,7 @@ country.gnb           = Guinea Bisseau
 country.gre           = Greece
 country.grn           = Grenada
 country.gua           = Guatemala
-country.gui           = Guinea
+country.gin           = Guinea
 country.gum           = Guam
 country.guy           = Guyana
 country.hai           = Haiti
@@ -187,14 +186,14 @@ country.lao           = Laos
 country.lbr           = Liberia
 country.lby           = Libya
 country.lca           = St. Lucia
-country.les           = Lesotho
+country.lso           = Lesotho
 country.lib           = Lebanon
 country.lie           = Liechtenstein
 country.ltu           = Lithuania
 country.lux           = Luxembourg
 country.lva           = Latvia
 country.mac           = Macau
-country.mad           = Madagascar
+country.mdg           = Madagascar
 country.mar           = Morocco
 country.mas           = Malaysia
 country.mda           = Moldova
@@ -207,7 +206,7 @@ country.mne           = Montenegro
 country.mng           = Mongolia
 country.moz           = Mozambique
 country.msr           = Montserrat
-country.mtn           = Mauritania
+country.mrt           = Mauritania
 country.mus           = Mauritius
 country.mwi           = Malawi
 country.mya           = Myanmar
@@ -217,7 +216,7 @@ country.ncl           = New Caledonia
 country.ned           = Netherlands
 country.nep           = Nepal
 country.nga           = Nigeria
-country.nig           = Niger
+country.ner           = Niger
 country.none          = -- Please select --
 country.nor           = Norway
 country.north_ireland = North Ireland
@@ -236,14 +235,14 @@ country.prt           = Portugal
 country.pur           = Puerto Rico
 country.qat           = Qatar
 country.rou           = Romania
-country.rsa           = South Africa
+country.zaf           = South Africa
 country.rus           = Russia
 country.rwa           = Rwanda
 country.sam           = Samoa
 country.sco           = Scotland
 country.sdn           = Sudan
 country.sen           = Senegal
-country.sey           = Seychelles
+country.syc           = Seychelles
 country.sgp           = Singapore
 country.skn           = St. Kitts and Nevis
 country.sle           = Sierra Leone
