--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -82,9 +82,9 @@ button.save              = Zapisz
 country.afg           = Afganistan
 country.aia           = Anguilla
 country.alb           = Albania
-country.alg           = Algieria
+country.dza           = Algieria
 country.and           = Andora
-country.ang           = Angola
+country.ago           = Angola
 country.arg           = Argentyna
 country.arm           = Armenia
 country.aru           = Aruba
@@ -106,7 +106,7 @@ country.bih           = Bo\u015Bnia i Hercegowina
 country.blr           = Bia\u0142oru\u015B
 country.blz           = Belize
 country.bol           = Bolivia
-country.bot           = Botswana
+country.bwa           = Botswana
 country.bra           = Brazylia
 country.brb           = Barbados
 country.bru           = Brunei Darussalam
@@ -114,8 +114,7 @@ country.bul           = Bu\u0142garia
 country.cam           = Kambod\u017Ca
 country.can           = Kanada
 country.cay           = Cayman Islands
-country.cgo           = Kongo
-country.cha           = Czad
+country.tcd           = Czad
 country.che           = Szwajcaria
 country.chi           = Chile
 country.chn           = Chiny
@@ -127,7 +126,7 @@ country.col           = Kolumbia
 country.com           = Comoros
 country.cpv           = Cape Verde
 country.crc           = Kostaryka
-country.cta           = Cent. African Republic
+country.caf           = Cent. African Republic
 country.cub           = Kuba
 country.cuw           = Curacao
 country.cyp           = Cypr
@@ -140,7 +139,7 @@ country.dom           = Dom. Republic
 country.ecu           = Ekwador
 country.egy           = Egipt
 country.eng           = Anglia
-country.eqg           = Equatorial Guinea
+country.gnq           = Equatorial Guinea
 country.eri           = Eritrea
 country.esp           = Hiszpania
 country.est           = Estonia
@@ -150,7 +149,7 @@ country.fin           = Finlandia
 country.fra           = Francja
 country.fro           = Faroe Islands
 country.gab           = Gabon
-country.gam           = Gambia
+country.gmb           = Gambia
 country.geo           = Gruzja
 country.gha           = Ghana
 country.gib           = Gibraltar
@@ -158,7 +157,7 @@ country.gnb           = Guinea Bisseau
 country.gre           = Grecja
 country.grn           = Grenada
 country.gua           = Guatemala
-country.gui           = Guinea
+country.gin           = Guinea
 country.gum           = Guam
 country.guy           = Guyana
 country.hai           = Haiti
@@ -187,14 +186,14 @@ country.lao           = Laos
 country.lbr           = Liberia
 country.lby           = Libia
 country.lca           = St. Lucia
-country.les           = Lesotho
+country.lso           = Lesotho
 country.lib           = Liban
 country.lie           = Liechtenstein
 country.ltu           = Litwa
 country.lux           = Luksemburg
 country.lva           = \u0141otwa
 country.mac           = Macau
-country.mad           = Madagaskar
+country.mdg           = Madagaskar
 country.mar           = Maroko
 country.mas           = Malezja
 country.mda           = Mo\u0142dawia
@@ -207,7 +206,7 @@ country.mne           = Czarnog\u00F3ra
 country.mng           = Mongolia
 country.moz           = Mozambik
 country.msr           = Montserrat
-country.mtn           = Mauritania
+country.mrt           = Mauritania
 country.mus           = Mauritius
 country.mwi           = Malawi
 country.mya           = Myanmar
@@ -217,7 +216,7 @@ country.ncl           = New Caledonia
 country.ned           = Holandia
 country.nep           = Nepal
 country.nga           = Nigeria
-country.nig           = Niger
+country.ner           = Niger
 country.none          = -- Prosz\u0119 wybra\u0107 --
 country.nor           = Norwegia
 country.north_ireland = P\u00F3\u0142nocna Irlandia
@@ -236,14 +235,14 @@ country.prt           = Portugalia
 country.pur           = Puerto Rico
 country.qat           = Katar
 country.rou           = Rumunia
-country.rsa           = Afryka Po\u0142udniowa
+country.zaf           = Afryka Po\u0142udniowa
 country.rus           = Rosja
 country.rwa           = Rwanda
 country.sam           = Samoa
 country.sco           = Szkocja
 country.sdn           = Sudan
 country.sen           = Senegal
-country.sey           = Seychelles
+country.syc           = Seychelles
 country.sgp           = Singapore
 country.skn           = St. Kitts and Nevis
 country.sle           = Sierra Leone
