--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -82,9 +82,9 @@ button.save              = Spara
 country.afg           = Afghanistan
 country.aia           = Anguilla
 country.alb           = Albanien
-country.alg           = Algeriet
+country.dza           = Algeriet
 country.and           = Andorra
-country.ang           = Angola
+country.ago           = Angola
 country.arg           = Argentina
 country.arm           = Armenien
 country.aru           = Aruba
@@ -106,7 +106,7 @@ country.bih           = Bosnien-Hercegovina
 country.blr           = Belarus
 country.blz           = Belize
 country.bol           = Bolivia
-country.bot           = Botswana
+country.bwa           = Botswana
 country.bra           = Brasilien
 country.brb           = Barbados
 country.bru           = Brunei
@@ -114,8 +114,7 @@ country.bul           = Bulgarien
 country.cam           = Kambodja
 country.can           = Kanada
 country.cay           = Cayman\u00F6arna
-country.cgo           = Kongo
-country.cha           = Tchad
+country.tcd           = Tchad
 country.che           = Schweiz
 country.chi           = Chile
 country.chn           = Kina
@@ -127,7 +126,7 @@ country.col           = Colombia
 country.com           = Komorerna
 country.cpv           = Kap Verde
 country.crc           = Costa Rica
-country.cta           = Centralafrikanska republiken
+country.caf           = Centralafrikanska republiken
 country.cub           = Kuba
 country.cuw           = Cura\u00E7ao
 country.cyp           = Cypern
@@ -140,7 +139,7 @@ country.dom           = Dominikanska republiken
 country.ecu           = Ecuador
 country.egy           = Egypten
 country.eng           = England
-country.eqg           = Ekvatorialguinea
+country.gnq           = Ekvatorialguinea
 country.eri           = Eritrea
 country.esp           = Spanien
 country.est           = Estland
@@ -150,7 +149,7 @@ country.fin           = Finland
 country.fra           = Frankrike
 country.fro           = F\u00E4r\u00F6arna
 country.gab           = Gabon
-country.gam           = Gambia
+country.gmb           = Gambia
 country.gbr           = Storbritannien
 country.geo           = Georgien
 country.gha           = Ghana
@@ -159,7 +158,7 @@ country.gnb           = Guinea-Bissau
 country.gre           = Grekland
 country.grn           = Grenada
 country.gua           = Guatemala
-country.gui           = Guinea
+country.gin           = Guinea
 country.gum           = Guam
 country.guy           = Guyana
 country.hai           = Haiti
@@ -188,14 +187,14 @@ country.lao           = Laos
 country.lbr           = Liberia
 country.lby           = Libyen
 country.lca           = Saint Lucia
-country.les           = Lesotho
+country.lso           = Lesotho
 country.lib           = Libanon
 country.lie           = Liechtenstein
 country.ltu           = Litauen
 country.lux           = Luxemburg
 country.lva           = Lettland
 country.mac           = Macao
-country.mad           = Madagaskar
+country.mdg           = Madagaskar
 country.mar           = Marocko
 country.mas           = Malaysia
 country.mda           = Moldavien
@@ -208,7 +207,7 @@ country.mne           = Montenegro
 country.mng           = Mongoliet
 country.moz           = Mo\u00E7ambique
 country.msr           = Montserrat
-country.mtn           = Mauretanien
+country.mrt           = Mauretanien
 country.mus           = Mauritius
 country.mwi           = Malawi
 country.mya           = Myanmar
@@ -218,7 +217,7 @@ country.ncl           = Nya Kaledonien
 country.ned           = Nederl\u00E4nderna
 country.nep           = Nepal
 country.nga           = Nigeria
-country.nig           = Niger
+country.ner           = Niger
 country.none          = -- V\u00E4lj land --
 country.nor           = Norge
 country.north_ireland = Nordirland
@@ -237,14 +236,14 @@ country.prt           = Portugal
 country.pur           = Puerto Rico
 country.qat           = Qatar
 country.rou           = Rum\u00E4nien
-country.rsa           = Sydafrika
+country.zaf           = Sydafrika
 country.rus           = Ryssland
 country.rwa           = Rwanda
 country.sam           = Samoa
 country.sco           = Skottland
 country.sdn           = Sudan
 country.sen           = Senegal
-country.sey           = Seychellerna
+country.syc           = Seychellerna
 country.sgp           = Singapore
 country.skn           = Saint Kitts och Nevis
 country.sle           = Sierra Leone
